--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>myTitle</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
+  </head>
+  <body>
+    <div class="overlay">
+        <div class="header">
+            <div id="header-text">
+                <h1>myHeading</h1>
+                <h2>myDesciption</h2>
+            </div>
+        </div>
+    </div>
+    <div class="main">
+      <p>myMainBody</p>
+    </div>
+  </body>
+</html>
+
