--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>myTitle</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="overlay">
