--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <div class="overlay">
         <div class="header">
             <div id="header-text">
-                <h1>myHeading</h1>
-                <h2>myDesciption</h2>
+                <h1>In the making</h1>
+                <h2>we can try</h2>
+                <p>Not everything is as it <button onclick="tryThis()">hey</button>seems...</p>
             </div>
         </div>
     </div>
     <div class="main">
-      <p>myMainBody</p>
+      <h1>What is True?</h1>
+      <p>What is <a href="https://www.google.com">real</a> and what is fake? Can you tell?</p>
     </div>
   </body>
 </html>
