--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div id="header-text">
                 <h1>In the making</h1>
                 <h2>we can try</h2>
-                <p>Not everything is as it <button onclick="tryThis()">hey</button>seems...</p>
+                <p>Not everything is as it <button onclick="changeColor()">hey</button>seems...</p>
             </div>
         </div>
     </div>
