--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </div>
     <div class="main">
       <h1>What is True?</h1>
+      <h2>{{message}}</h2>
       <p>What is <a href="https://www.google.com">real</a> and what is fake? Can you tell?</p>
     </div>
   </body>
