--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="main">
       <h1>What is True?</h1>
       <h2>{{message}}</h2>
-      <p>What is <a href="https://www.google.com">real</a> and what is fake? Can you tell?</p>
+      <p>What is real <a href="https://www.google.com">this is it</a> and what is fake? Can you tell?</p>
     </div>
   </body>
 </html>
