--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             <div id="header-text">
                 <h1>In the making</h1>
                 <h2>we can try</h2>
-                <p>Not everything is as it <button onclick="changeColor()">hey</button>seems...</p>
+                <p>Not everything is as it <button type="button" onclick="changeColor()">hey</button>seems...</p>
+                <script src="script.js"></script>
             </div>
         </div>
     </div>
