--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>myTitle</title>
+    <title>myProjectSite</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
