--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="main">
       <h1>What is True?</h1>
       <h2>{{message}}</h2>
-      <p>What is real <a href="https://www.google.com">this is it</a> and what is fake? Can you tell?</p>
+      <p>What is real <a href="https://www.google.com">this is it</a> and what is fake? <img src="./images/NGNL 2.png" alt="coulndt display img" id="ngnlimg" width="100" height="100"> Can you tell?</p>
     </div>
   </body>
 </html>
