--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             <div id="header-text">
                 <h1>In the making</h1>
                 <h2>we can try</h2>
-                <p>Not everything is as it <button type="button" onclick="changeColor()">hey</button>seems...</p>
+                <p>Not everything is <button type="button" onclick="changeColor()">as it seems...</button></p>
             </div>
         </div>
     </div>
     <div class="main">
       <h1>What is True?</h1>
       <h2>{{message}}</h2>
-      <p>What is real <a href="https://www.google.com">this is it</a> and what is fake? <img src="./images/NGNL 2.png" alt="coulndt display img" id="ngnlimg" width="100" height="100"> Can you tell?</p>
+      <p>What is real <a href="https://www.google.com"> and what is fake?</a><img src="./images/NGNL 2.png" alt="coulndt display img" id="ngnlimg" width="100" height="100"> Can you tell?</p>
     </div>
   </body>
 </html>
