--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <title>myProjectSite</title>
+    <!--Google Fonts Stylesheet-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
+    <!--Reference style.css-->
     <link rel="stylesheet" href="style.css">
+    <!--Reference script.js-->
     <script src="script.js"></script>
   </head>
   <body>
