--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>myProjectSite</title>
-    <!--Google Fonts Stylesheet-->
+    <title>myTestWebpage</title>
+    <!--Reference Google Fonts Stylesheet-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
     <!--Reference style.css-->
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet">
     <!--Reference script.js-->
     <script src="script.js"></script>
   </head>
@@ -13,17 +13,18 @@
     <div class="overlay">
         <div class="header">
             <div id="header-text">
-                <h1>In the making</h1>
-                <h2>we can try</h2>
-                <p>Not everything is <button type="button" onclick="changeColor()">as it seems...</button></p>
+                <h1>This,</h1>
+                <h2>is the beginning of our web dev journey</h2>
+                <p>Everything starts small, and slowly grows bigger, and wilder, <button type="button" onclick="changeColor()">and crazier...</button></p>
             </div>
         </div>
     </div>
     <div class="main">
-      <h1>What is True?</h1>
-      <h2>{{message}}</h2>
-      <p>What is real <a href="https://www.google.com"> and what is fake?</a><img src="./images/NGNL 2.png" alt="coulndt display img" id="ngnlimg" width="100" height="100"> Can you tell?</p>
+      <h1>The Beginning</h1>
+      <p>It all started <a href="https://www.google.com">on a peaceful day in Hillock County,</a><img src="./images/NGNL 2.png" alt="coulndt display img" id="ngnlimg" width="100" height="100"> the wind blowing gently over the quietly slumbering land.</p>
+      <ul>
+        <li>This beautiful land, is where our story begins.</li>
+      </ul>
     </div>
   </body>
 </html>
-
