--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="header-text">
                 <h1>This,</h1>
                 <h2>is the beginning of our web dev journey</h2>
-                <p>Everything starts small, and slowly grows bigger, and wilder, <button type="button" onClick="changeColor()">and crazier...</button></p>
+                <p>Everything starts small, and slowly grows bigger, and wilder, <button type="button" onclick="changeColor()">and crazier...</button></p>
             </div>
         </div>
     </div>
